# HACKATHON

./: .gitignore  README.md  claims_2023.txt  policy_guidelines.txt
backend/: README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: schemas.py
backend/app/routers/: documents.py  query.py  voice.py
backend/app/services/: document_service.py  embedding_service.py  llm_service.py  model_downloader.py  rag_service.py  router_service.py  vision_service.py  whisper_service.py
backend/data/documents/: afac9cb2-f5c0-48ae-98bd-a1587f277879.txt  b0206443-15c8-45c5-9d3a-ea90f54d680d_chunks.json
backend/data/embeddings/: chunk_map.json  faiss.index  metadata.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/pages/: Dashboard.css  Dashboard.jsx  Documents.css  Documents.jsx
